--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "start": "react-native start",
+    "setup_project": "npm run step1; npm run step2",
+    "step1": "rm -rf node_modules/react-native/node_modules/react; rm -rf node_modules/react-native/node_modules/fbjs; rm -rf node_modules/react/node_modules/fbjs",
+    "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
-    "react-native": "^0.17.0",
-    "react-native-material-kit": "^0.2.4"
+    "fbjs": "^0.6.1",
+    "react-native": "0.18.0-rc",
+    "react-redux": "4.0.6",
+    "redux": "3.0.5",
+    "redux-thunk": "^1.0.3"
   }
 }
