--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "fbjs": "^0.6.1",
+    "history": "^1.17.0",
+    "react-dom": "^0.14.6",
     "react-native": "0.18.0-rc",
     "react-redux": "4.0.6",
+    "react-router": "^1.0.3",
     "redux": "3.0.5",
+    "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.3"
   }
 }
