--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "history": "^1.17.0",
     "react-dom": "^0.14.6",
     "react-native": "0.18.0-rc",
+    "react-native-pull-to-refresh": "^1.0.4",
+    "react-native-refreshable-listview": "^1.3.0",
     "react-redux": "4.0.6",
     "react-router": "^1.0.3",
     "redux": "3.0.5",
