--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.18.0-rc",
     "react-native-pull-to-refresh": "^1.0.4",
     "react-native-refreshable-listview": "^1.3.0",
+    "react-native-router-flux": "^2.1.8",
     "react-redux": "4.0.6",
     "react-router": "^1.0.3",
     "redux": "3.0.5",
